--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="deep_purple">#450088</color>
+    <color name="shock_purple">#a146ff</color>
+    <color name="shock_pink">#fc36fd</color>
+    <color name="shock_orange">#ff7c44</color>
+    <color name="pink_accent">#e187ff</color>
+    <color name="yellow_accent">#ffc564</color>
+    <color name="purple_accent">#b887ff</color>
+    <color name="deep_blue_purple">#040a53</color>
+    <color name="correct_green">#75cfb8</color>
+    <color name="incorrect_red">#ff6666</color>
 </resources>
