--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -23,4 +23,36 @@
         android:layout_marginBottom="10dp"
         android:tint="@color/white"/>
 
+    <EditText
+        android:id="@+id/editQuestionField"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="25dp"
+        android:inputType="textMultiLine"
+        android:hint="Enter new question text here."
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/shock_pink"/>
+
+    <EditText
+        android:id="@+id/editAnswerField"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="25dp"
+        android:inputType="textMultiLine"
+        android:hint="Enter correct answer here."
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/shock_purple"
+        android:layout_below="@id/editQuestionField"/>
+
+
 </RelativeLayout>
