--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -12,6 +12,20 @@
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:id="@+id/save_icon"
+        android:src="@drawable/ic_iconmonstr_save_1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:tint="@color/white"/>
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:id="@+id/close_icon"
         android:src="@drawable/ic_iconmonstr_x_mark_circle_thin"
         android:layout_alignParentRight="true"
