--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -68,5 +68,36 @@
         android:backgroundTint="@color/shock_orange"
         android:layout_below="@id/editQuestionField"/>
 
+    <EditText
+        android:id="@+id/editIncorrectField1"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="25dp"
+        android:inputType="textMultiLine"
+        android:hint="Enter wrong answer option here."
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/shock_pink"
+        android:layout_below="@id/editAnswerField"/>
+
+    <EditText
+        android:id="@+id/editIncorrectField2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="25dp"
+        android:inputType="textMultiLine"
+        android:hint="Enter wrong answer option here."
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/shock_pink"
+        android:layout_below="@id/editIncorrectField1"/>
 
 </RelativeLayout>
