--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:textSize="40dp"
         android:gravity="center"
         android:background="@drawable/question_side_drawable"
-        android:text="Who is the 44th President of the United States?"
+        android:text=""
         android:textColor="#f5f5f5"
         android:elevation="10dp"/>
 
@@ -35,12 +35,12 @@
         android:textSize="40dp"
         android:textColor="#f0e5d8"
         android:gravity="center"
-        android:text="Barack Obama"
+        android:text=""
         android:elevation="10dp"/>
 
     <TextView
         android:id="@+id/choice1"
-        android:text="Bill Clinton"
+        android:text=""
         android:background="@drawable/choices_drawable"
         android:layout_width="match_parent"
         android:gravity="center"
@@ -56,7 +56,7 @@
 
     <TextView
         android:id="@+id/choice2"
-        android:text="George H. W. Bush"
+        android:text=""
         android:background="@drawable/choices_drawable"
         android:layout_width="match_parent"
         android:layout_height="80dp"
@@ -72,7 +72,6 @@
 
     <TextView
         android:id="@+id/choice3"
-        android:text="Barack Obama"
         android:background="@drawable/choices_drawable"
         android:layout_width="match_parent"
         android:layout_height="80dp"
@@ -97,7 +96,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:tint="@color/white"/>
+        android:tint="@color/white"
+    />
 
     <ImageView
         android:layout_width="40dp"
@@ -112,6 +112,8 @@
         android:layout_marginBottom="10dp"
         android:visibility="invisible"
         android:tint="@color/white"/>
+
+
 
     <ImageView
         android:layout_width="40dp"
@@ -131,7 +133,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/edit_icon"
-        android:src="@drawable/ic_iconmonstr_pencil_6"
+        android:src="@drawable/ic_iconmonstr_pencil_thin"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -140,6 +142,20 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:tint="@color/white" />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/cycle_icon"
+        android:src="@drawable/ic_iconmonstr_angel_right_circle_thin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:tint="@color/white"
+        android:layout_above="@id/hide_icon"/>
+    />
 
 </RelativeLayout>
 
