--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/deep_purple"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
 
     <TextView
         android:id="@+id/flashcard_question"
@@ -86,6 +86,28 @@
         android:layout_below="@id/choice2"/>
 
     <ImageView
+        android:id="@+id/empty_state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/empty_file"
+        />
+
+    <TextView
+        android:id="@+id/empty_text"
+        android:layout_height="wrap_content"
+        android:text="No cards created yet."
+        android:textSize="20dp"
+        android:layout_marginBottom="30dp"
+        android:textStyle="italic"
+        android:visibility="invisible"
+        android:layout_below="@id/empty_state"
+        android:textColor="@color/white"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        />
+
+    <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/unhide_icon"
@@ -112,8 +134,6 @@
         android:layout_marginBottom="10dp"
         android:visibility="invisible"
         android:tint="@color/white"/>
-
-
 
     <ImageView
         android:layout_width="40dp"
@@ -155,6 +175,21 @@
         android:layout_marginBottom="10dp"
         android:tint="@color/white"
         android:layout_above="@id/hide_icon"/>
+    />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/trash_icon"
+        android:src="@drawable/ic_iconmonstr_trash_can_thin"
+        android:layout_alignLeft="@id/cycle_icon"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:tint="@color/white"
+        android:layout_above="@id/edit_icon"/>
     />
 
 </RelativeLayout>
